add initial cv website files

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <td>
         <h1>Yatesh Solanki</h1>
         <p><em>postgraduate in <strong><a href="https://education.nationalgeographic.org/resource/anthropology">Anthropology</a></strong></em></p>
-        <p>I love to read and write.My favourite thing to do is to <strong>teach german</strong></p>
+        <p>I love to read and write.what i love to do?-<strong>teach german</strong></p>
       </td>
     </tr>
   </table>
